fix: overflow x

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ html {
 body {
   margin: 0;
   display: flex;
-  width: 100vw;
   min-height: 100%;
   font-family: "Raleway", sans-serif;
   font-size: 1.125rem;
